fix: Menu jumps vertically on logout (#3194)

--- a/src/amo/components/Header/styles.scss
+++ b/src/amo/components/Header/styles.scss
@@ -113,7 +113,7 @@
 
 .Header-button {
   margin-bottom: 12px;
-  vertical-align: middle;
+  vertical-align: top;
 }
 
 .Header-developer-hub-link {
@@ -128,6 +128,7 @@
       display: inline-block;
       font-size: $font-size-s;
       font-weight: normal;
+      padding-top: 4px;
       text-decoration: none;
     }
   }
